; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cartridge.c_CARTRIDGE_StateSave.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cartridge.c_CARTRIDGE_StateSave.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 }
%struct.TYPE_3__ = type { i32, i32, i32 }

@CARTRIDGE_main = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@CARTRIDGE_piggyback = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@CARTRIDGE_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CARTRIDGE_StateSave() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @CARTRIDGE_main, i32 0, i32 0), align 4
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @CARTRIDGE_piggyback, i32 0, i32 0), align 4
  %4 = load i32, i32* @CARTRIDGE_NONE, align 4
  %5 = icmp ne i32 %3, %4
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load i32, i32* %1, align 4
  %8 = sub nsw i32 0, %7
  store i32 %8, i32* %1, align 4
  br label %9

9:                                                ; preds = %6, %0
  %10 = call i32 @StateSav_SaveINT(i32* %1, i32 1)
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @CARTRIDGE_main, i32 0, i32 0), align 4
  %12 = load i32, i32* @CARTRIDGE_NONE, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %9
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @CARTRIDGE_main, i32 0, i32 2), align 4
  %16 = call i32 @StateSav_SaveFNAME(i32 %15)
  %17 = call i32 @StateSav_SaveINT(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @CARTRIDGE_main, i32 0, i32 1), i32 1)
  br label %18

18:                                               ; preds = %14, %9
  %19 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @CARTRIDGE_piggyback, i32 0, i32 0), align 4
  %20 = load i32, i32* @CARTRIDGE_NONE, align 4
  %21 = icmp ne i32 %19, %20
  br i1 %21, label %22, label %27

22:                                               ; preds = %18
  %23 = call i32 @StateSav_SaveINT(i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @CARTRIDGE_piggyback, i32 0, i32 0), i32 1)
  %24 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @CARTRIDGE_piggyback, i32 0, i32 2), align 4
  %25 = call i32 @StateSav_SaveFNAME(i32 %24)
  %26 = call i32 @StateSav_SaveINT(i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @CARTRIDGE_piggyback, i32 0, i32 1), i32 1)
  br label %27

27:                                               ; preds = %22, %18
  ret void
}

declare dso_local i32 @StateSav_SaveINT(i32*, i32) #1

declare dso_local i32 @StateSav_SaveFNAME(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
